--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,9 @@ services:
     build: .
     ports:
       - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules  # Prevents overwriting node_modules inside container
+    environment:
+      - NODE_ENV=development
+    command: npm start
